
package protos;

import "PB_base_data.proto";
import "PB_usr_data.proto";
import "PB_error_code.proto";
import "PB_statistics_data.proto";
import "PB_notify.proto";

enum UsrDataOpt 
{
	Request_All  		 	= 1;	// 获取用户所有数据
	Request_Player		 	= 2;	// 获取 player data
	Request_Account      	= 3;	// 获取 account data
	Modify_Account	 	 	= 4;	// 修改 account data
	Modify_Player		 	= 5;	// 修改 player data (资源类的字段(gold...)为增量)
	Clear_Email			 	= 6;	// 清空邮件
}

enum OptSrc
{
	Src_PHP  = 1;
	Src_Game = 2;
	Src_Hall = 3;
}

enum OptReason
{
	OptReason_None  = 1;
	buy_yueka_ok 	= 2;	// 购买月卡成功 sdk
	get_yueka_award = 3;	// 领取月卡奖励
	use_item 		= 4;	// 使用道具
	pay_gold		= 5;	// 人民币购买的金币 sdk
	exchange 		= 6;	// 兑换
	vip_reward 		= 7;	// vip 奖励
	checkin_reward 	= 8;	// 签到 奖励
	promotion_reward = 9;	// 活动	奖励
	mall_reward 	= 10;	// 商城	奖励
	mall_reward_sdk = 11;	// 商城	奖励 sdk 跳转操作
	first_pay 		= 12;	// 首充	sdk
	gm_tool 		= 13;	// gm 后台
}

// 用户数据操作
message PBS_UsrDataOprater
{		
	required int64 playerid = 1;
	optional UsrDataOpt opt = 2;
	optional OptSrc src = 3; // 调用来源
	optional RedisProto.RPB_AccountData account_data = 4;
	optional RedisProto.RPB_PlayerData player_data = 5;
	repeated PB_Item item_opt = 6; 		// 物品操作
	optional PB_Email send_email = 7;	// 发送邮件
	optional OptReason reason = 8[default = OptReason_None]; // 操作原因
	optional PB_Item use_item = 9;	// 使用道具
	optional PB_BuyGoods buy_goods_notify = 10; // 购买物品
	optional RPB_PlayerNumerical player_numerical_set  = 11;	// set  玩家数值相关
	optional RPB_PlayerNumerical player_numerical_incr = 12;	// incr 玩家数值相关
	optional PB_HallNotify notify = 13;	// 下推
}

message PBS_UsrDataOpraterReturn
{
	required PB_ErrorCode code = 1;
	optional RedisProto.RPB_PlayerData base = 2; 
	optional RedisProto.RPB_AccountData account_data = 3;
	repeated RedisProto.RPB_ModuleData modules = 4;
	optional RPB_PlayerNumerical player_numerical = 5;
	repeated PB_Item items = 6;
}


